@@ -82,12 +82,18 @@
 
 <!--      <p>There is currently no separate development release.</p>-->
       <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.3.tar.gz"
+      title="Source code of the latest unstable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.11.3</a></div> 
+      
+    <h3>Past releases</h3>
+      <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.2.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.11.2</a></div> 
-      
-    <h3>Past releases</h3>
+
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.1.tar.gz"
       title="Source code of the latest unstable release">
