@@ -71,6 +71,13 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>August 21, 2008</h3>
+   	      <b>Unstable</b> version 0.11.3 released!  New in this release:
+   	      <ul>
+   	        <li>Quick fix to build with latest gnome-sharp release.</li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>August 18, 2008</h3>
    	      <b>Unstable</b> version 0.11.2 released!  New in this release:
    	      <ul>
