@@ -1,3 +1,8 @@
+2008-08-21  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.11.3 release.
+	* download.html: Ditto.
+
 2008-08-18  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Updated for 0.11.2 release.
